DesignProject/tests/error/test07.src
// type mismatch in assignment
func testTypeMismatch() -> void {
    local x : integer;
    x := 5.5;  // error: assigning float to integer
}


